fixed cloud refreshing issue on mobile

--- a/src/styles/Intro.module.css
+++ b/src/styles/Intro.module.css
@@ -126,6 +126,6 @@
 
 @media all and (max-width: 1200px) {
   .hero, .cloud1, .cloud2 {
-    display: none;
+    opacity: 0;
   }
 }
